# EdgeShield

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  compose.yaml
config/: edgeshield.json
core-proxy/: CMakeLists.txt  Dockerfile
core-proxy/include/edgeshield/: config.hpp  gateway.hpp
core-proxy/include/edgeshield/backend/: backend_client.hpp  backend_runtime.hpp  backend_selector.hpp  circuit_breaker.hpp  connection_pool.hpp
core-proxy/include/edgeshield/cache/: response_cache.hpp
core-proxy/include/edgeshield/config/: config.hpp
core-proxy/include/edgeshield/http/: http_helpers.hpp  proxy_handler.hpp
core-proxy/include/edgeshield/metrics/: metrics.hpp  prometheus.hpp  proxy_log.hpp
core-proxy/include/edgeshield/ratelimit/: rate_limiter.hpp
core-proxy/include/edgeshield/routing/: route_matcher.hpp
core-proxy/include/edgeshield/state/: gateway_state.hpp
core-proxy/src/: main.cpp
core-proxy/src/backend/: backend_client.cpp  backend_selector.cpp  circuit_breaker.cpp  connection_pool.cpp
core-proxy/src/cache/: response_cache.cpp
core-proxy/src/config/: config.cpp
core-proxy/src/http/: http_helpers.cpp  proxy_handler.cpp
core-proxy/src/metrics/: metrics.cpp  prometheus.cpp  proxy_log.cpp
core-proxy/src/ratelimit/: rate_limiter.cpp
core-proxy/src/routing/: route_matcher.cpp
core-proxy/src/state/: gateway_state.cpp
core-proxy/tests/: core_tests.cpp
demo-backends/: Dockerfile  package-lock.json  package.json  server.js
demo-traffic/: Dockerfile  package.json  server.js  traffic-plan.js  traffic-plan.test.js
demo-traffic/public/: app.js  index.html  styles.css
infra/docker/: edgeshield.docker.json
infra/grafana/dashboards/: edgeshield-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/k8s/: edgeshield.json
infra/prometheus/: prometheus.yml
